# TAi-Teaching-Assistant-Intelligence

./: README.md  docker-compose.yml  pyproject.toml
config/: schema.yaml  tai.yaml
config/bootstrap/: INTERVIEW_PERSONA.md  REVIEW_SCHEDULE.md  TA_PERSONA.md  TEACHING_PROTOCOL.md  TOOLS.md
config/prompts/: extraction.md  flush.md  misconception_check.md
data/: profile_cache.sqlite  wal.sqlite
scripts/: index.py
src/: __init__.py
src/api/: __init__.py  app.py  dependencies.py
src/api/middleware/: __init__.py  rate_limit.py
src/api/routes/: health.py
src/core/: __init__.py  pipeline.py
src/core/indexing/: __init__.py  community.py  extractor.py  pipeline.py  resolver.py
src/core/indexing/ingestors/: __init__.py  assignment.py  base.py  code.py  discussion.py  notes.py  paper.py  slides.py  transcript.py
src/core/profile/: cache.py  generator.py
src/core/prompt/: builder.py
src/core/retrieval/: __init__.py  context_builder.py  global_search.py  hybrid_search.py  local_search.py  router.py
src/graph/: __init__.py  connection.py  migrations.py  queries.py  schema.py
src/memory/: __init__.py  flush.py  misconception.py  models.py  store.py  worker.py
src/safety/: __init__.py  consent.py  executor.py  intervention.py  panic.py
src/session/: __init__.py  context.py  manager.py
src/shared/: config.py  embeddings.py  exceptions.py  llm.py  logging.py  tokens.py
src/tai.egg-info/: SOURCES.txt  entry_points.txt
src/tests/: conftest.py
src/tests/unit/api/: __init__.py  test_rate_limit.py
src/tests/unit/core/: test_ingestors.py  test_profile.py  test_prompt_builder.py
src/tests/unit/memory/: test_flush.py  test_misconception.py  (+1 more)
tai.egg-info/: PKG-INFO  requires.txt
tests/integration/: test_indexing_pipeline.py  test_query_pipeline.py
tests/unit/: test_graph_queries.py  test_session.py
tests/unit/api/: test_health.py
tests/unit/core/: test_community.py  test_extractor.py  test_global_search.py  test_resolver.py
tests/unit/memory/: test_store.py
tests/unit/safety/: test_consent.py  test_executor.py
(+1 files in other folders)
